// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Defines the protos passed to/from fifo_server.

syntax = "proto2";

package maldoca;

import "maldoca/js/babel/babel.proto";

option java_multiple_files = true;

message BabelRequest {
  oneof kind {
    BabelParseRequest parse = 1;
    BabelGenerateRequest generate = 2;
  }
}

message BabelGenerateRequest {
  // Should comments be included in output?
  optional bool include_comments = 1 [default = true];

  // Whether we should base64-decode string literals.
  optional bool base64_decode_string_literals = 2 [default = false];
}

message BabelResponse {
  oneof kind {
    BabelParseResponse parse = 1;
    BabelGenerateResponse generate = 2;
  }
}

// Only contains the errors (if any) in the response.
// The AST is returned separatedly.
message BabelParseResponse {
  // Some errors are recoverable and/or are not severe enough to stop parsing.
  //
  // Currently Babel always throws an exception when parsing fails, so we can
  // have at most one error.
  repeated BabelError errors = 1;

  optional BabelScopes scopes = 2;
}

message BabelGenerateResponse {
  // Babel throws exceptions if the provided AST is invalid.
  optional BabelError error = 1;
}
